added customer/user administration and more
- switched from materialize to mdbootstrap
- removed flex layout
- added customer administration
- added user administration
- added functionality to the api service (request methods and generic types)
- added project overview to the dashboard page
- made initializer work (not yet complete though...)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1>{{title}}</h1>
-
-<app-menu></app-menu>
-
-<router-outlet></router-outlet>
+<div class="container">
+	<h1>{{title}}</h1>
+	<div class="row">
+		<app-menu class="col-12"></app-menu>
+		<router-outlet class="col-12"></router-outlet>
+	</div>
+</div>
