--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,7 +1,9 @@
-<nav>
-	<div fxLayout="row">
-		<div fxFlex="20%"><a routerLink="/">Home</a></div>
-		<div fxFlex="20%"><a routerLink="/init">Initializer</a></div>
-		<div fxFlex="20%"><a routerLink="/products">Products</a></div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<div class="container-fluid">
+		<div class="navbar-brand"><a routerLink="/">Home</a></div>
+		<div class="navbar-brand"><a routerLink="/init">Initializer</a></div>
+		<div class="navbar-brand"><a routerLink="/customers">Customers</a></div>
+		<div class="navbar-brand"><a routerLink="/users">Users</a></div>
+		<div class="navbar-brand"><a routerLink="/products">Products</a></div>
 	</div>
 </nav>
