--- a/src/app/product/product-details/product-details.component.html
+++ b/src/app/product/product-details/product-details.component.html
@@ -1,22 +1,44 @@
 <form>
-	<div fxLayout="column">
-		<label fxFlex="25%" *ngIf="exists">
-			id: {{product.id}}
-		</label>
-		<label fxFlex="25%">
-			name:
-			<input [(ngModel)]="product.name" placeholder="name" name="name"/>
-		</label>
-		<label fxFlex="25%">
-			type:
-			<input [(ngModel)]="product.type" placeholder="type" name="type"/>
-		</label>
-		<label fxFlex="25%">
-			price:
-			<input [(ngModel)]="product.price" placeholder="price" name="price"/>
-		</label>
-		<label fxFlex="25%">
-			<button (click)="save()">Save</button>
-		</label>
-	</div>
+	<mdb-card>
+		<mdb-card-body>
+			<div class="row">
+				<div class="col">
+					<span *ngIf="exists" class="col-md-12">
+						id: {{product.id}}
+					</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="product.name" id="name" name="name"
+						/>
+						<label for="name">Name</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="product.type" id="type" name="type"
+						/>
+						<label for="type">Type</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="product.price" id="price" name="price"
+						/>
+						<label for="price">Price</label>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-lg-4">
+					<button (click)="save()" class="btn btn-primary">{{ exists ? 'Update' : 'Create' }}</button>
+				</div>
+			</div>
+		</mdb-card-body>
+	</mdb-card>
 </form>
