--- a/src/app/product/product-search/product-search.component.html
+++ b/src/app/product/product-search/product-search.component.html
@@ -1,31 +1,86 @@
-<div fxLayout="row">
-	<button routerLink="/product/new">Create New Product</button>
-</div>
-<form (change)="filterHasChanged()">
-	<div fxLayout="row">
-		<label fxFlex="25%">
-			name:
-			<input [(ngModel)]="filter.name" placeholder="name" name="name"/>
-		</label>
-		<label fxFlex="25%">
-			type:
-			<input [(ngModel)]="filter.type" placeholder="type" name="type"/>
-		</label>
-		<label fxFlex="25%">
-			price:
-			<input [(ngModel)]="filter.price" placeholder="price" name="price"/>
-		</label>
-		<label fxFlex="25%">
-			<button (click)="search()">Search</button>
-		</label>
+<div class="row">
+	<div class="col">
+		<button routerLink="/product/new" class="btn btn-secondary">Create New Product</button>
 	</div>
-</form>
-<div fxLayout="row">Current Search Filter:</div>
-<div fxLayout="row">
-	<div fxFlex="25%">name: {{filter.name}}</div>
-	<div fxFlex="25%">type: {{filter.type}}</div>
-	<div fxFlex="25%">price: {{filter.price}}</div>
 </div>
+
+<form (change)="filterHasChanged()">
+	<mdb-card>
+		<mdb-card-body>
+			<div class="row">
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="filter.id" id="id" name="id"
+						/>
+						<label for="id">Product ID</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="filter.name" id="name" name="name"
+						/>
+						<label for="name">Name</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="filter.type" id="type" name="type"
+						/>
+						<label for="type">Type</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="filter.priceMin" id="priceMin" name="priceMin"
+						/>
+						<label for="priceMin">Min. Price</label>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4">
+					<div class="md-form">
+						<input class="form-control mb-4" type="text" mdbInput
+							[(ngModel)]="filter.priceMax" id="priceMax" name="priceMax"
+						/>
+						<label for="priceMax">Max. Price</label>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					Current Search Filter:
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<ul>
+						<li>name: <b>{{filter.name}}</b></li>
+						<li>type: <b>{{filter.type}}</b></li>
+						<li>
+							price:
+							<b>
+								<span *ngIf="!isPriceFilterSet('min') && !isPriceFilterSet('max')">all</span>
+								<span *ngIf="!isPriceFilterSet('min') && isPriceFilterSet('max')">&euro; {{filter.priceMax}} or less</span>
+								<span *ngIf="isPriceFilterSet('min') && !isPriceFilterSet('max')">&euro; {{filter.priceMin}} or more</span>
+								<span *ngIf="isPriceFilterSet('min') && isPriceFilterSet('max')">between &euro; {{filter.priceMin}} and &euro; {{filter.priceMax}}</span>
+							</b>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col">
+					<label>
+						<button (click)="search()" class="btn btn-primary">Search</button>
+					</label>
+				</div>
+			</div>
+		</mdb-card-body>
+	</mdb-card>
+</form>
 
 <div *ngIf="isWaiting">
 	<b>Searching! Please be patient...</b>
